<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:background="#eeeeee">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_title"
                android:textAppearance="@style/TextAppearance.Header"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                style="@style/TextComponent.ItemRow"
                />

            <include layout="@layout/seperator_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step1"
                style="@style/TextAppearance.ItemExample"
                android:id="@+id/step1"
                />


            <include layout="@layout/seperator_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step2"
                style="@style/TextAppearance.ItemExample"
                android:id="@+id/step2"
                />

            <include layout="@layout/seperator_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step3"
                style="@style/TextAppearance.ItemExample"
                android:id="@+id/step3"
                />

            <include layout="@layout/seperator_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step4"
                style="@style/TextAppearance.ItemExample"
                android:id="@+id/step4"
                />

            <include layout="@layout/seperator_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step5"
                style="@style/TextAppearance.ItemExample"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:id="@+id/info"
        style="@style/TextAppearance.InfoStyle"
        />
    </LinearLayout>


</RelativeLayout>
